# turf-backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  Pipfile  README.md  auth.py  database.py  docker-compose.yml  main.py  models.py  playground.py  pyproject.toml  requirements.txt  schemas.py  scrape.py  test.ipynb  test_ai.ipynb  vercel.json
.github/workflows/: daily-updater.yml  lint.yml  python-app.yml  semantic-release.yml
controllers/: pdf_file.py  user.py
core/: __init__.py
core/config/: settings.py
database/: __init__.py  database.py
models/: turf.py  user.py
models/racing/: __init__.py  racing.py
playground/: scrapping.ipynb  test.ipynb
routes/: __init__.py  auth.py  dependencies.py  pdf_file.py  pdf_reader.py  users.py
routes/racing/: racing.py
schemas/: user.py
scripts/: import_palermo.py  import_san_isidro.py
tests/api/routes/user/: conftest.py  test_user.py
tests/controllers/: conftest.py  test_pdf_file.py
tests/routes/horses/: test_horses.py
tests/routes/pdf_file/: conftest.py  test_pdf_file.py
tests/routes/racing/: conftest.py  test_racing.py
tests/routes/user/: conftest.py  test_user.py
tests/services/: conftest.py  test_pdf_file.py
tests/services/san_isidro/: conftest.py  test_sanisidro_processing.py
tests/utils/: conftest.py  test_date.py  test_http_requests.py
tests/utils/logging/: conftest.py  test_logging.py
turf_backend/: __init__.py  main.py
turf_backend/api/: __init__.py  app.py
turf_backend/api/auth/: __init__.py
turf_backend/api/dependencies/: __init__.py  database.py  repositories.py  services.py
turf_backend/api/routes/: __init__.py
turf_backend/api/routes/base/: __init__.py  router.py
turf_backend/api/routes/horses/: __init__.py  router.py
turf_backend/api/routes/palermo/: dependencies.py  router.py
turf_backend/api/routes/races/: __init__.py  router.py
turf_backend/api/routes/san_isidro/: __init__.py  router.py
turf_backend/api/routes/users/: __init__.py  exception_handlers.py  router.py
turf_backend/auth/: __init__.py  auth.py
turf_backend/auth/models/: user.py
turf_backend/auth/schemas/: __init__.py  user.py
turf_backend/controllers/: __init__.py  pdf_file.py  temp_pdf_downloader.py  user.py  utils.py
turf_backend/core/: __init__.py
turf_backend/core/config/: settings.py
turf_backend/database/: __init__.py  database.py
turf_backend/models/: __init__.py  horse.py  race.py  turf.py  user.py
turf_backend/repositories/: __init__.py  sql.py
turf_backend/routes/: __init__.py  dependencies.py  general.py  horses.py  palermo.py  pdf_file.py  pdf_reader.py  pdfs.py  san_isidro.py  temp_pdf_downloader.py  users.py
turf_backend/services/: __init__.py  helper.py  palermo_processing.py  pdf_file.py  pdf_processing.py  races.py  user.py
turf_backend/services/file/: __init__.py  service.py
turf_backend/services/palermo/: __init__.py  helper.py  palermo_processing.py  races.py  service.py
turf_backend/services/san_isidro/: helper.py  races.py  sanisidro_processing.py  scraper.py
turf_backend/services/user/: __init__.py  exceptions.py  service.py
turf_backend/utils/: __init__.py  date.py  extract_text.py  get_races_detail.py  html_parser.py  http_request.py  http_requests.py  logger.py  logging.py  settings.py
utils/: date.py
